--- a/base/static/base/navbar.css
+++ b/base/static/base/navbar.css
@@ -9,6 +9,7 @@ body{
     --text-color:#94a1b2;
 }
 .google{
+
     background-color: #3e3e47;
     color:white;
     height:30px;
@@ -26,27 +27,37 @@ body{
 
 }
 .google img{
+
     padding: 5px 10px 5px 5px;
 }
 .google h3{
+
     margin-top:5px;
     font-size:15px;
     padding-right:5px;
 }
 .add,.logout{
+
     margin:10px;
 }
 .add{
+
     color: white;
 }
 .logout{
+
     color:#f25042;
 }
 .nav{
+    z-index:2;
+    position: fixed;
+    top:0;
+    width:100%;
     background-color: #28282e;
     color:white;
     height:70px;
-    top:0;
+    box-shadow: 0px 25px 28px -15px #111;  
+    
 }
 .square{
   text-align: center;
