--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -11,6 +11,23 @@
 
     <div class="nav"> 
 
+        <!-- LONG LOGO -->
+        <svg class='long-logo' width="382" height="40" viewBox="0 0 382 67" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.27 66V16.3H23.38C28.8867 16.3 33.4833 17.42 37.17 19.66C40.9033 21.8533 43.7033 24.84 45.57 28.62C47.4833 32.3533 48.44 36.5067 48.44 41.08C48.44 46.12 47.39 50.5067 45.29 54.24C43.2367 57.9733 40.32 60.8667 36.54 62.92C32.8067 64.9733 28.42 66 23.38 66H4.27ZM34.58 41.08C34.58 37.2067 33.5767 34.1033 31.57 31.77C29.61 29.39 26.88 28.2 23.38 28.2H17.92V54.1H23.38C26.9733 54.1 29.7267 52.8633 31.64 50.39C33.6 47.9167 34.58 44.8133 34.58 41.08ZM89.7974 54.1V66H54.3774V16.3H89.1674V28.2H68.0274V35.2H86.0874V46.26H68.0274V54.1H89.7974ZM105.735 16.3L115.465 50.25L125.055 16.3H139.405L122.255 66H108.675L91.315 16.3H105.735ZM165.867 16.3H181.127L196.947 66H183.087L180.077 56.27H166.847L163.907 66H149.977L165.867 16.3ZM177.907 47.17L173.497 29.67L168.877 47.17H177.907ZM230.63 32.54C230.63 32.54 230.233 32.3067 229.44 31.84C228.646 31.3733 227.596 30.86 226.29 30.3C224.983 29.6933 223.56 29.1567 222.02 28.69C220.48 28.2233 218.963 27.99 217.47 27.99C216.303 27.99 215.346 28.1767 214.6 28.55C213.853 28.9233 213.48 29.5533 213.48 30.44C213.48 31.7467 214.296 32.68 215.93 33.24C217.61 33.7533 219.873 34.4767 222.72 35.41C225.8 36.3433 228.46 37.4167 230.7 38.63C232.94 39.8433 234.666 41.4067 235.88 43.32C237.093 45.1867 237.7 47.6833 237.7 50.81C237.7 53.7967 237.163 56.3167 236.09 58.37C235.016 60.3767 233.57 61.9867 231.75 63.2C229.93 64.4133 227.9 65.3 225.66 65.86C223.42 66.3733 221.133 66.63 218.8 66.63C216.42 66.63 213.923 66.3967 211.31 65.93C208.743 65.4167 206.246 64.74 203.82 63.9C201.393 63.0133 199.176 61.9867 197.17 60.82L203.05 48.85C203.05 48.85 203.516 49.13 204.45 49.69C205.383 50.25 206.62 50.88 208.16 51.58C209.7 52.28 211.403 52.91 213.27 53.47C215.183 54.03 217.096 54.31 219.01 54.31C220.503 54.31 221.53 54.1233 222.09 53.75C222.696 53.33 223 52.7933 223 52.14C223 51.16 222.486 50.4133 221.46 49.9C220.433 49.34 219.08 48.8267 217.4 48.36C215.766 47.8467 213.946 47.2633 211.94 46.61C207.553 45.1167 204.356 43.3433 202.35 41.29C200.343 39.19 199.34 36.32 199.34 32.68C199.34 28.9933 200.203 25.9133 201.93 23.44C203.656 20.9667 205.92 19.1 208.72 17.84C211.566 16.5333 214.623 15.88 217.89 15.88C220.316 15.88 222.65 16.1833 224.89 16.79C227.176 17.35 229.3 18.05 231.26 18.89C233.266 19.73 235.016 20.5233 236.51 21.27L230.63 32.54ZM279.153 54.1V66H243.733V16.3H278.523V28.2H257.383V35.2H275.443V46.26H257.383V54.1H279.153Z" fill="white"/>
+            <path d="M139 66L154 16H169.5L152.5 66H139Z" fill="#5FD796"/>
+            <path d="M194 16H156V26H190.5L194 16Z" fill="#5FD796"/>
+            <path d="M180.5 55H146V66H183.5L180.5 55Z" fill="#5FD796"/>
+        </svg>
+
+
+        <svg class='short-logo' width="161" height="47" viewBox="0 0 161 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0.27 74V24.3H19.38C24.8867 24.3 29.4833 25.42 33.17 27.66C36.9033 29.8533 39.7033 32.84 41.57 36.62C43.4833 40.3533 44.44 44.5067 44.44 49.08C44.44 54.12 43.39 58.5067 41.29 62.24C39.2367 65.9733 36.32 68.8667 32.54 70.92C28.8067 72.9733 24.42 74 19.38 74H0.27ZM30.58 49.08C30.58 45.2067 29.5767 42.1033 27.57 39.77C25.61 37.39 22.88 36.2 19.38 36.2H13.92V62.1H19.38C22.9733 62.1 25.7267 60.8633 27.64 58.39C29.6 55.9167 30.58 52.8133 30.58 49.08ZM85.7974 62.1V74H50.3774V24.3H85.1674V36.2H64.0274V43.2H82.0874V54.26H64.0274V62.1H85.7974ZM101.735 24.3L111.465 58.25L121.055 24.3H135.405L118.255 74H104.675L87.315 24.3H101.735Z" fill="white"/>
+            <path d="M106 74L121 24H136.5L119.5 74H106Z" fill="#5FD796"/>
+            <path d="M161 24H123V34H156.89L161 24Z" fill="#5FD796"/>
+            <path d="M147 63H113V74H142.24L147 63Z" fill="#5FD796"/>
+        </svg>
+    
+    
         {% if request.user.is_authenticated %}
 
             <a href='{% url "logout" %}'>
@@ -19,17 +36,26 @@
                 </div>
             </a>
             <a href='{% url "add" %}'>
-                <div class='google'>
-                    <h3 class='add'><i  style='padding-right:10px;color:#2cb67d;' class="fa fa-plus fa-1px"></i>Add Project</h3>
+                <div class="long-add">
+                    <div class='google'>
+                        <h3 class='add'><i  style='padding-right:10px;color:#2cb67d;' class="fa fa-plus fa-1px"></i>Add Project</h3>
+                    </div>
+                </div>
+            </a>
+            <a href='{% url "add" %}'>
+                <div class="small-add">
+                    <div class='google'>
+                        <h3 class='add'><i  style='padding-right:10px;color:#2cb67d;' class="fa fa-plus fa-1px"></i>Add</h3>
+                    </div>
                 </div>
             </a>
 
         {% else %}
 
-            <a href="{% provider_login_url 'google' %}">
+            <a href="{% provider_login_url 'google' %}?next=/home">
                 <div class='google'>
                     <img style='width:25px;' src='https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg'>
-                    <h3>Login Google</h3>
+                    <h3>Login</h3>
                 </div>
             </a>
 
