--- a/base/static/base/hero.css
+++ b/base/static/base/hero.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
 
-
+.small-h4{
+    display:none;
+    font-weight:normal;
+    font-family: 'Noto Sans', sans-serif;
+    color:#94a1b2;
+    margin-top:-10px;
+    font-size:18px;
+    margin-right:10px;
+}
+.small-h1{
+    display:none;
+    font-weight:bold;
+    font-family: 'Montserrat', sans-serif;
+}
 h1{
     font-weight:bold;
     font-family: 'Montserrat', sans-serif;
@@ -42,7 +55,7 @@ h4{
 .google-login h3{
     margin-top:7px;
     font-size:18px;
-    padding-right:5px;
+    padding-right:10px;
 }
 
 
@@ -64,6 +77,38 @@ h4{
     position: absolute;
     z-index:-1;
     top: 33em;
+    stroke-width: 8px;
+
+}
+@media only screen and (max-width: 1000px) {
+    .illust1{
+        display:none;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+    h1,h4{
+        display:none;
+    }
+    .small-h1,.small-h4{
+        display: block;
+    }
+    .small-h1{
+        font-size:39px;
+    }
+    .illust2{
+        width:470px;
+        float:left;
+        position: absolute;
+        z-index:-1;
+        top: 15em;
+        stroke-width: 30px;
+    }
+    .hero{
+        margin:-30px 0 6em 30px;
+    }
+    
 }
 
 
