--- a/base/static/base/home.css
+++ b/base/static/base/home.css
@@ -46,9 +46,12 @@ button{
     border-radius:20px 20px 0 0;
 }
 .author{
-    padding-left: 220px;
-    color:#94a1b2;
-    font-weight:normal;
+    margin:-12px 0 0 150px;
+
+    padding-left: 0px;
+    color:#dadada;
+    font-size:19px;
+    font-weight:bold;
 }
 
 body{
@@ -74,7 +77,7 @@ body{
     margin-right:14px;
 }
 .items{
-    background-color:#1f1f25;
+    background-color:#282830;
     border-radius: 20px;
     padding:1em 1.5em   .5em 1.4em;
     box-shadow: 0px 0px 10px 0px rgb(12, 11, 11);
@@ -230,16 +233,28 @@ a:hover{
 .social-buttons{
     z-index: 2;
     position:absolute;
-    left:510px;
-    top:3170px;
-    width:25%;
+    left:515px;
+    top:3120px;
+    width:30%;
     display:flex;
     flex-direction:row;
-
     flex-wrap: wrap;
 }
+.instagram{
+    margin-left:60px;
+}
+.contact-us{
+    display:none;
+    text-align:center;
+    font-weight: bold;
+    color:white;
+    font: size 17px;
+}
+hr{
+    display:none;
+}
 
-
+/* TABLET */
 @media only screen and (max-width: 800px) {
     .container{
         margin-left:15%;
@@ -250,15 +265,44 @@ a:hover{
     .items{
         width:60%;
     }
+    
+   
    
 }
+
 @media only screen and (max-width: 600px) {
     .container{
-        margin-left:-9%;
+        margin-left:2.5%;
         display:flex;
         flex-direction: column;
     }
     .items{
         width:80%;
     }
+  
+    .social-buttons{
+        position:initial;
+        margin: 15px 0 30px 6px;
+        justify-content: center;
+        width:100%;
+        display:flex;
+        flex-direction:row;
+        flex-wrap: wrap;
+    }
+    .instagram{
+        margin-left:-15px;
+    }
+    .illust3{
+        display:none;
+    }
+    .contact-us,hr{
+        display: block;
+    }
+    .author{
+        margin:-13px 0 0 113px;
+    
+        
+    }
+    
+    
 }
