--- a/base/templates/base/layout.html
+++ b/base/templates/base/layout.html
@@ -14,7 +14,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Phase</title>
+    <title>Dev Case</title>
     
     {% block styles %}
     {% endblock %}
