--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -52,7 +52,7 @@
 
         {% else %}
 
-            <a href="{% provider_login_url 'google' %}?next=/home">
+            <a href="{% provider_login_url 'google' %}?next=/">
                 <div class='google'>
                     <img style='width:25px;' src='https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg'>
                     <h3>Login</h3>
