--- a/base/templates/base/hero.html
+++ b/base/templates/base/hero.html
@@ -24,7 +24,7 @@
             </a>
         {%else%}
 
-            <a href="{% provider_login_url 'google' %}?next=/home">
+            <a href="{% provider_login_url 'google' %}?next=/">
                 <div class='google-login'>
                     <img style='width:25px;' src='https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg'>
                     <h3>Login</h3>
