--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -86,7 +86,7 @@
         
     </div>
 
-    <div class="footer">
+<!--     <div class="footer">
         <h3 class='contact-us'>Contact us </h3>
         <hr>
         <div class="social-buttons">
@@ -149,7 +149,7 @@
             <path d="M353 52C353 26.0426 374.043 5 400 5H1016C1041.96 5 1063 26.0426 1063 52V328H353V52Z" fill="#1F1F25"/>
         </svg>
         
-    </div>
+    </div> -->
 
 
     
